--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "arui-feather": "^16.0.0-rc.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "web3": "^1.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
