--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "arui-feather": "^16.0.0-rc.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.5",
+    "react-modal": "^3.11.1",
+    "react-scripts": "^3.3.0",
     "web3": "^1.2.4"
   },
   "scripts": {
