--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "arui-feather": "^16.0.0-rc.5",
+    "classname": "0.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.11.1",
